--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/build/
-/test/
-/dist/
-/nbproyect/private/
+HotelIdealG81/build/
+HotelIdealG81/test/
+HotelIdealG81/dist/
+HotelIdealG81/nbproject/private/
