ABM habitaciones y pruebas en el main

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ HotelIdealG81/build/
 HotelIdealG81/test/
 HotelIdealG81/dist/
 HotelIdealG81/nbproject/private/
+*.properties
+*.properties
+*.properties
