--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ HotelIdealG81/nbproject/private/
 *.properties
 *.properties
 HotelIdealG81/build/built-jar.properties
+HotelIdealG81/nbproject/private/private.properties
