--- a/HotelIdealG81/nbproject/private/private.properties
+++ b/HotelIdealG81/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Francisco\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\TheOf\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
