--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ HotelIdealG81/build/
 HotelIdealG81/test/
 HotelIdealG81/dist/
 HotelIdealG81/nbproject/private/
+HotelIdealG81/nbproject/private/private.xml
 *.properties
 *.properties
 *.properties
