--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ HotelIdealG81/test/
 HotelIdealG81/dist/
 HotelIdealG81/nbproject/private/
 HotelIdealG81/nbproject/private/private.xml
+HotelIdealG81/nbproject/private/private.properties
 *.properties
 *.properties
 *.properties
