--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ HotelIdealG81/nbproject/private/private.properties
 HotelIdealG81/build/built-jar.properties
 
 HotelIdealG81/nbproject/private/private.properties
+*.xml
