--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ HotelIdealG81/build/built-jar.properties
 
 HotelIdealG81/nbproject/private/private.properties
 *.xml
+HotelIdealG81/nbproject/private/private.properties
+HotelIdealG81/nbproject/private/private.xml
