--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ HotelIdealG81/nbproject/private/private.properties
 *.xml
 HotelIdealG81/nbproject/private/private.properties
 HotelIdealG81/nbproject/private/private.xml
+HotelIdealG81/nbproject/private/private.xml
