--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ HotelIdealG81/nbproject/private/private.properties
 HotelIdealG81/nbproject/private/private.properties
 HotelIdealG81/nbproject/private/private.xml
 HotelIdealG81/nbproject/private/private.xml
+HotelIdealG81/nbproject/private/private.properties
+HotelIdealG81/nbproject/private/private.xml
+HotelIdealG81/nbproject/private/private.xml
+HotelIdealG81/build/built-jar.properties
